--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.2",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.7.1",
     "express": "^4.13.4",
-    "express-session": "^1.14.0",
+    "express-session": "^1.15.3",
     "lodash": "^4.13.1",
     "mongoose": "^4.4.3",
     "underscore": "^1.8.3"
